welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:23: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:26: error: expected start of definition
	override def forward()  {
                 ^Diagonal:29: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:32: error: expected start of definition
	override def backward() {
                 ^Diagonal:35: error: Unmatched closing brace '}' ignored here
}
^